# prospect-shortlisting

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.scrape  README.md  celerybeat-schedule.db  docker-compose.local.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  celery_app.py  main.py  queue.py  worker.py
docs/: browserless-api-reference.md  pipeline-consistency-checklist.md  repository-mental-model.md  snov-api-reference.md  zerobounce-api-reference.md
scripts/: analyze_possible_patterns.py  analyze_signal_leakage.py  apollo_bulk_match_experiment.py  apollo_fetch_sideload.py  apollo_sideload_apply_to_db.py  apply_procrastinate_schema_maybe.py  audit_contact_tables.py  benchmark_classify.py  benchmark_fetch_domains.py  clean_up_for_apollo.py  crawl_all_parallel.py  get_title_match_rules.py  preview_dataset.py  run_blind_llm_eval.py  run_scrape_batch.sh  run_worker.sh  sample_dataset.py  scrape_websites.py  scraping.py  select_websites.py  test_scrape.py  test_scrapling.py  test_worker_split.py
tests/: conftest.py  test_analysis_usage_events.py  test_beat_reconciler.py  test_bulk_contact_fetch.py  test_campaign_scoping.py  test_campaigns.py  test_cas.py  test_celery_tasks.py  test_companies_list.py  test_contact_admin.py  test_contact_apollo.py  test_contact_company_gap_filters.py  test_contact_fetch_api.py  test_contact_fetch_service.py  test_contact_identity.py  test_contact_reveal.py  test_contact_rules.py  test_contact_stage_contracts.py  test_contact_stage_mutations.py  test_contact_verify.py  test_contacts.py  (+34 more)
(+267 files in other folders)
