[project]
name = "prospect-shortlisting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "browserforge>=1.2.4",
    "curl-cffi>=0.14.0",
    "fastapi>=0.118.0",
    "msgspec>=0.20.0",
    "openai>=2.7.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "polars>=1.38.1",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "ruff>=0.15.4",
    "scrapling>=0.4.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "httpx>=0.27.0",
]
